chore: #1290 Remove some code smells Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>